Fix navigation links to use pretty permalinks

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,8 @@
-
 <h2 class="title">{{ site.title }}</h2>
 <nav>
-    <a href="/">Home</a>
-    <a href="doing.html">Doing</a>
-    <a href="thinking.html">Thinking</a>
-    <a href="enjoying.html">Enjoying</a>
-    <a href="people.html">Cool People</a>
+    <a href="{{ site.baseurl }}/">Home</a>
+    <a href="{{ site.baseurl }}/doing/">Doing</a>
+    <a href="{{ site.baseurl }}/thinking/">Thinking</a>
+    <a href="{{ site.baseurl }}/enjoying/">Enjoying</a>
+    <a href="{{ site.baseurl }}/people/">Cool People</a>
 </nav>
-
-
