add beyond page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,4 +5,5 @@
     <a href="{{ site.baseurl }}/thinking/">Thinking</a>
     <a href="{{ site.baseurl }}/enjoying/">Enjoying</a>
     <a href="{{ site.baseurl }}/people/">Cool People</a>
+    <a href="{{ site.baseurl }}/beyond/">& Beyond</a>
 </nav>
