--- a/_layouts/travel.html
+++ b/_layouts/travel.html
@@ -90,7 +90,7 @@
   </main>
 
   <footer>
-    <a href="/wandering.html">← Back to Wandering</a>
+    <a href="{{ site.baseurl }}/beyond/">← Back to Wandering</a>
   </footer>
 </body>
 </html>
